--- a/pages/admin/admin-login.html
+++ b/pages/admin/admin-login.html
@@ -30,8 +30,8 @@
           <div class="col-4 bg-white" style="height: 450px">
             <div class="row justify-content-center align-items-center h-100">
               <div class="col-9">
-                <h2 class="fs-3 mb-2 fw-bold">管理者登入</h2>
-                <h3 class="fs-6 mb-3"><small>觀迎回來，請登入您的帳號</small></h3>
+                <h2 class="fs-3 mb-2 fw-bold text-dark">管理者登入</h2>
+                <h3 class="fs-6 mb-3 text-dark"><small>觀迎回來，請登入您的帳號</small></h3>
                 <div class="form-floating mb-3">
                   <input
                     type="email"
