--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -7,33 +7,34 @@
     <title>創夢工坊</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="../assets/images/icons/favicon.ico" rel="shortcut icon" />
   </head>
   <body>
     <%- include('./layout/header'); -%>
-    <section class="privacy-section">
+    <section class="privacy-section mt-14">
       <div class="container py-5">
-        <h1 class="mb-4">隱私保護政策</h1>
-        <h4 class="mb-2">什麼是隱私權政策?</h4>
+        <h2 class="mb-6 fs-2">隱私保護政策</h2>
+        <h4 class="mb-2 text-light">什麼是隱私權政策?</h4>
         <p class="mb-10">我們十分重視會員的隱私權保護,除嚴格遵守我國個人資料保護法及相關法令規定外,更以非常嚴謹的態度與具體作為,管理及保護您的個人資料。在隱私權政策中,我們詳細說明個人資料的蒐集類型、蒐集方式、利用目的、安全維護措施。我們承諾遵守隱私權政策所載明的內容,致力保護會員個人資料的安全。</p>
-        <h5>一、 隱私權保護政策的適用範圍</h5>
+        <h5 class="text-light mb-2">一、 隱私權保護政策的適用範圍</h5>
         <ul class="ps-9">
           <li>隱私權保護政策內容,包括本網站如何處理在您使用網站服務時收集到的個人識別資料。</li>
           <li>隱私權保護政策不適用於本網站以外的相關連結網站,也不適用於非本網站所委託或參與管理的人員。</li>
         </ul>
-        <h5>二、 個人資料的蒐集、處理及利用方式</h5>
+        <h5 class="text-light mb-2">二、 個人資料的蒐集、處理及利用方式</h5>
         <ul class="ps-9">
           <li>當您蒞臨本網站或參與本網站活動時,我們將視活動性質請您提供必要的個人資料,並在該特定目的範圍內處理及利用您的個人資料。</li>
           <li>本網站蒐集足以識別使用者身分的個人資料、消費與交易資料,或日後經您同意而提供之其他個人資料,都僅供本網站於其內部、依照蒐集之目的進行處理和利用、或為完成提供服務或履行合約義務之必要、或依照相關法令規定或有權政府機關之命令或要求,否則 本網站不會將足以識別使用者身分的個人資料提供給第三人(包括境內及境外)、或移作蒐集目的以外之使用。
           </li>
         </ul>
-        <h5>三、 資料之保護</h5>
+        <h5 class="text-light mb-2">三、 資料之保護</h5>
         <ul class="ps-9">
           <li>本網站主機均設有防火牆、防毒系統等相關的各項資訊安全設備及必要的安全防護措施,加以保護網站及您的個人資料採用嚴格的保護措施,只由經過授權的人員才能接觸您的個人資料,相關處理人員皆簽有保密合約,如有違反保密義務者,將會受到相關的法律處分。</li>
           <li>如因業務需要有必要委託本網站相關單位提供服務時,本網站亦會嚴格要求其遵守保密義務,並且採取必要檢查程序以確定其將確實遵守。</li>
         </ul>
-        <h5>四、 網站對外的相關連結</h5>
+        <h5 class="text-light mb-2">四、 網站對外的相關連結</h5>
         <p>本網站的網頁提供其他網站的網路連結,您也可經由本網站所提供的連結,點選進入其他網站。但該連結網站不適用本網站的隱私權保護政策,您必須參考該連結網站中的隱私權保護政策。</p>
-        <h5>五、 與第三人共用個人資料之政策</h5>
+        <h5 class="text-light mb-2">五、 與第三人共用個人資料之政策</h5>
         <p>本網站絕不會提供、交換、出租或出售任何您的個人資料給其他個人、團體、私人企業或公務機關,但有法律依據或合約義務者,不在此限。</p>
         <p>前項但書之情形包括不限於：</p>
         <ul class="ps-9">
@@ -45,11 +46,11 @@
           <li>有利於您的權益。</li>
           <li>本網站委託廠商協助蒐集、處理或利用您的個人資料時,將對委外廠商或個人善盡監督管理之責。</li>
         </ul>
-        <h5>六、 Cookie 之使用</h5>
+        <h5 class="text-light mb-2">六、 Cookie 之使用</h5>
         <p>為了提供您最佳的服務,本網站會在您的電腦中放置並取用我們的Cookie,若您不願接受Cookie的寫入,您可在您使用的瀏覽器功能項中設定隱私權等級為高,即可拒絕Cookie的寫入,但可能會導至網站某些功能無法正常執行 。</p>
         <p>如何關閉 Cookie?</p>
         <p>瀏覽器允許您更改 Cookie 的設定。 這些設定可以在您的瀏覽器選單上的「選項」或 「設定」找到。 如欲了解更多這些設定,可參考下列的連結,對您可能有幫助。</p>
-        <h5>七、 隱私權保護政策之修正</h5>
+        <h5 class="text-light mb-2">七、 隱私權保護政策之修正</h5>
         <p>本網站隱私權保護政策將因應需求隨時進行修正,修正後的條款將刊登於網站上。</p>
       
       </div>
