更新手機sidebar、我的帳戶、評價、收藏區塊RWD

--- a/pages/activity-casper.html
+++ b/pages/activity-casper.html
@@ -9,7 +9,7 @@
 <body>
     <%- include('./layout/header'); -%>
 
-    <main class="bg-gray-1000 py-15">
+    <main class="py-15">
          <!-- banner -->
         <section class="container py-8">
             <div>
@@ -22,7 +22,7 @@
          <section class="container w-50">
             <div class="border-bottom border-1 border-primary-1000 py-8">
                 <h2 class="fw-bolder text-primary-1000">卡斯柏創業分享會 </h2>
-                <ul class="fs-5 text-gray-200">
+                <ul class="fs-5 text-gray-200 list-unstyled">
                     <li>日期：2024年9月15日</li>
                     <li>時間：14:00-17:00</li>
                     <li>地點：高雄市鹽埕區七賢三路123號2樓</li>
@@ -74,7 +74,7 @@
 
                 <div class="py-8">
                     <h3 class="fw-bolder text-primary-600">【聯繫我們】</h3>
-                    <ul class="text-gray-400">
+                    <ul class="text-gray-400 list-unstyled">
                         <li>如果您有任何問題，請隨時聯繫我們：</li>
                         <li>電話：123-456-7890</li>
                         <li><a href="mailto:info@casperonlinelearning.com">電子郵件：info@casperonlinelearning.com</a></li>
