--- a/pages/activity.html
+++ b/pages/activity.html
@@ -9,7 +9,7 @@
 <body>
     <%- include('./layout/header'); -%>
   
-<main class="bg-gray-1000 py-15">
+<main class="py-15">
 
      
       <!-- 輪播圖 -->
@@ -54,7 +54,7 @@
               <div class="col-md-6">
                 <div class="card-body text-white bd-gray-800">
                   <h2 class="card-title text-primary-1000 fw-bold">卡斯柏創業分享會</h2>
-                  <ul class="fs-5">
+                  <ul class="fs-5 list-unstyled">
                     <li>日期：2024年9月15日</li>
                     <li>時間：14:00-17:00</li>
                     <li>地點：高雄市鹽埕區七賢三路123號2樓</li>
@@ -75,7 +75,7 @@
               <div class="col-md-6">
                 <div class="card-body text-white">
                   <h2 class="card-title text-primary-1000 fw-bold">創夢工坊展覽會</h2>
-                  <ul class="fs-5">
+                  <ul class="fs-5 list-unstyled">
                     <li>日期：2024年9月20日</li>
                     <li>時間：14:00-17:00</li>
                     <li>地點：新北市板橋區中正路120號</li>
@@ -96,7 +96,7 @@
               <div class="col-md-6">
                 <div class="card-body text-white">
                   <h2 class="card-title text-primary-1000 fw-bold">與投資人來一場聯誼活動吧</h2>
-                  <ul class="fs-5">
+                  <ul class="fs-5 list-unstyled">
                     <li>日期：2024年9月15日</li>
                     <li>時間：14:00-17:00</li>
                     <li>地點：新北市板橋區中正路120號</li>
@@ -117,7 +117,7 @@
               <div class="col-md-6">
                 <div class="card-body text-white">
                   <h2 class="card-title text-primary-1000 fw-bold">創夢工坊展覽會</h2>
-                  <ul class="fs-5">
+                  <ul class="fs-5 list-unstyled">
                     <li>日期：2024年9月15日</li>
                     <li>時間：14:00-17:00</li>
                     <li>地點：新北市板橋區中正路120號</li>
