--- a/pages/member/meber-applyActivity.html
+++ b/pages/member/meber-applyActivity.html
@@ -9,7 +9,7 @@
 <body>
     <%- include('./layout/header'); -%>
   
-<main class="bg-gray-1000 py-15">
+<main class="bg-green py-15">
        <!-- 首頁>會員中心>創業項目收藏 -->
     <section class="container pt-8">
                 <nav aria-label="breadcrumb">
