--- a/pages/member/meber-collectInvestor.html
+++ b/pages/member/meber-collectInvestor.html
@@ -9,7 +9,7 @@
 <body>
     <%- include('./layout/header'); -%>
   
-<main class="bg-halo py-15">
+<main class="bg-green py-15">
   
        <!-- 首頁>會員中心>投資人收藏 -->
     <section class="container pt-8 d-none d-lg-block">
