--- a/pages/discuss.html
+++ b/pages/discuss.html
@@ -9,7 +9,7 @@
 <body>
     <%- include('./layout/header'); -%>
   
-    <main class="bg-gray-1000 py-15">
+    <main class="py-15">
 
        <section class="container py-lg-8 py-5">
            <div class="row">
