--- a/pages/member/meber-collectProjects.html
+++ b/pages/member/meber-collectProjects.html
@@ -9,7 +9,7 @@
 <body>
     <%- include('./layout/header'); -%>
   
-<main class="bg-halo py-15">
+<main class="bg-green py-15">
        <!-- 首頁>會員中心>創業項目收藏 -->
     <section class="container pt-8 d-none d-lg-block">
                 <nav aria-label="breadcrumb">
