--- a/pages/investor/Investor-experience.html
+++ b/pages/investor/Investor-experience.html
@@ -8,12 +8,14 @@
 <body>
     <%- include('./layout/header'); -%>
   
-    <%- include('./components/Investor-information'); -%>
-    <div class="bg-gray-1000">
+    
+    <div class="bg-green">
+        <%- include('./components/Investor-information'); -%>
         <div class="container">
             <div class="row">
                 <div class="col-1"></div>
                 <div class="col-10">
+                    <p class="pb-5 fs-2 text-primary-600 text-center d-lg-none d-block">投資經歷</p>
                     <p class="pb-15"> 
                         開辦蟹堡王餐廳。<br>
                         現任蟹堡王餐廳老闆，至今約20餘年<br>
