--- a/pages/investor/Investor-resource.html
+++ b/pages/investor/Investor-resource.html
@@ -8,12 +8,14 @@
 <body>
     <%- include('./layout/header'); -%>
   
-    <%- include('./components/Investor-information'); -%>
-    <div class="bg-gray-1000">
+    
+    <div class="bg-green">
+        <%- include('./components/Investor-information'); -%>
         <div class="container">
             <div class="row">
                 <div class="col-1"></div>
                 <div class="col-10">
+                    <p class="pb-5 fs-2 text-primary-600 text-center d-lg-none d-block">具體相關資源</p>
                     <p class="pb-15"> 
                         人脈和關係網<br>
                         本人在比奇堡擁有廣泛的人脈和關係網,從食材供應商乃至設備廠商，
