--- a/pages/project/Project-evaluate.html
+++ b/pages/project/Project-evaluate.html
@@ -8,9 +8,11 @@
 <body>
     <%- include('./layout/header'); -%>
   
-    <%- include('./components/Project-information'); -%>
-    <div class="bg-gray-1000">
+    
+    <div class="bg-green">
+        <%- include('./components/Project-information'); -%>
         <div class="container">
+            <p class="pb-5 fs-2 text-primary-600 text-center d-lg-none d-block">創業者評價</p>
                 <div class="d-flex border-bottom border-gray-600 ms-lg-3">
                     <img src="/assets/images/留言頭像1.png" alt="曹穎惠" class="rounded-circle me-2" style="width: 40px; height: 40px;">
                     <div>
