--- a/pages/project/Project-introduction.html
+++ b/pages/project/Project-introduction.html
@@ -8,12 +8,14 @@
 <body>
     <%- include('./layout/header'); -%>
   
-    <%- include('./components/Project-information'); -%>
-    <div class="bg-gray-1000">
+    
+    <div class="bg-green">
+        <%- include('./components/Project-information'); -%>
         <div class="container">
             <div class="row">
                 <div class="col-1"></div>
                 <div class="col-10">
+                    <p class="pb-5 fs-2 text-primary-600 text-center d-lg-none d-block">項目簡介</p>
                     <p class="pb-5 fs-2">項目名稱： 林媽媽中式餐館</p>
                     <p class="pb-15"> 
                         公司簡介： 專注於提供正宗的中國美食體驗。
