--- a/pages/project/Project-market.html
+++ b/pages/project/Project-market.html
@@ -8,12 +8,14 @@
 <body>
     <%- include('./layout/header'); -%>
   
-    <%- include('./components/Project-information'); -%>
-    <div class="bg-gray-1000">
+    
+    <div class="bg-green">
+        <%- include('./components/Project-information'); -%>
         <div class="container">
             <div class="row">
                 <div class="col-1"></div>
                 <div class="col-10">
+                    <p class="pb-5 fs-2 text-primary-600 text-center d-lg-none d-block">市場規模</p>
                     <p class="pb-15"> 
                         台灣中式餐飲市場在2019年的市場規模達到約1,500億台幣，
                         並預計每年以約5%的年增長率穩定增長。
