--- a/pages/project/Project-model.html
+++ b/pages/project/Project-model.html
@@ -8,12 +8,14 @@
 <body>
     <%- include('./layout/header'); -%>
   
-    <%- include('./components/Project-information'); -%>
-    <div class="bg-gray-1000">
+    
+    <div class="bg-green">
+        <%- include('./components/Project-information'); -%>
         <div class="container">
             <div class="row">
                 <div class="col-1"></div>
                 <div class="col-10">
+                    <p class="pb-5 fs-2 text-primary-600 text-center d-lg-none d-block">商業模式</p>
                     <p class="pb-15"> 
                         採用傳統的餐飲業商業模式，注重提供高品質的中國美食體驗，並通過以下方式來實現商業目標：<br><br>
 
