--- a/pages/project/Project-photo.html
+++ b/pages/project/Project-photo.html
@@ -8,9 +8,11 @@
 <body>
     <%- include('./layout/header'); -%>
   
-    <%- include('./components/Project-information'); -%>
-    <div class="bg-gray-1000">
+    
+    <div class="bg-green">
+        <%- include('./components/Project-information'); -%>
         <div class="container">
+            <p class="pb-5 fs-2 text-primary-600 text-center d-lg-none d-block">照片參考</p>
             <div>
                 <img src="/assets/images/廚師.png" class="pb-15 d-block w-50 mx-auto" alt="chef">
             </div>
