--- a/pages/project/Project-swot.html
+++ b/pages/project/Project-swot.html
@@ -8,12 +8,14 @@
 <body>
     <%- include('./layout/header'); -%>
   
-    <%- include('./components/Project-information'); -%>
-    <div class="bg-gray-1000">
+    
+    <div class="bg-green">
+        <%- include('./components/Project-information'); -%>
         <div class="container">
             <div class="row">
                 <div class="col-1"></div>
                 <div class="col-10">
+                    <p class="pb-5 fs-2 text-primary-600 text-center d-lg-none d-block">SWOT分析</p>
                     <p class="pb-15"> 
                         優勢：<br>
                         提供多樣性的菜系，滿足各類顧客的需求。
