--- a/pages/project/Project-team.html
+++ b/pages/project/Project-team.html
@@ -8,12 +8,14 @@
 <body>
     <%- include('./layout/header'); -%>
   
-    <%- include('./components/Project-information'); -%>
-    <div class="bg-gray-1000">
+    
+    <div class="bg-green">
+        <%- include('./components/Project-information'); -%>
         <div class="container">
             <div class="row">
                 <div class="col-1"></div>
                 <div class="col-10">
+                    <p class="pb-5 fs-2 text-primary-600 text-center d-lg-none d-block">團隊</p>
                     <p class="pb-15"> 
                         創始人及經營者：<br>
                         林小姐：擁有十年以上的餐飲業經驗，曾在多家知名餐廳擔任高級管理職位。憑藉對中國菜文化的深刻理解和熱愛，致力於打造正宗的中華風味餐廳。<br><br>
