--- a/pages/investor/Investor-autobiography.html
+++ b/pages/investor/Investor-autobiography.html
@@ -8,12 +8,14 @@
 <body>
     <%- include('./layout/header'); -%>
   
-    <%- include('./components/Investor-information'); -%>
-    <div class="bg-gray-1000">
+    
+    <div class="bg-green">
+        <%- include('./components/Investor-information'); -%>
         <div class="container">
             <div class="row">
                 <div class="col-1"></div>
                 <div class="col-10">
+                    <p class="pb-5 fs-2 text-primary-600 text-center d-lg-none d-block">自傳</p>
                     <p class="pb-15"> 
                         經歷：<br><br>
                         我在一個貧困的家庭中長大。<br>
