--- a/pages/investor/Investor-photo.html
+++ b/pages/investor/Investor-photo.html
@@ -8,10 +8,10 @@
 <body>
     <%- include('./layout/header'); -%>
   
-    <%- include('./components/Investor-information'); -%>
-    
-    <div class="bg-gray-1000">
+    <div class="bg-green">
+        <%- include('./components/Investor-information'); -%>
         <div class="container">
+            <p class="pb-5 fs-2 text-primary-600 text-center d-lg-none d-block">照片參考</p>
             <div>
                 <img src="/assets/images/蟹堡王.jpeg" class="pb-15 d-block w-50 mx-auto" alt="burger">
                 <img src="/assets/images/蟹堡王1.jpeg" class="pb-15 d-block w-50 mx-auto" alt="burger1">
