--- a/pages/investor/ProjectList-investor.html
+++ b/pages/investor/ProjectList-investor.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <%- include('./layout/header'); -%>
-  <div class="bg-gray-1000">
+  <div class="bg-green">
 
      <!-- 推薦投資人 -->
         <div class="container py-8 py-lg-15">
@@ -150,116 +150,116 @@
         
 
       <!-- 篩選產業 -->
-        <div class="container py-lg-15">
-          <h2 class="fw-bold fs-3 text-center text-primary-600 mb-lg-1">篩選產業</h2>
-          <p class="text-gray-200 text-center fs-4 mb-lg-8">快速找尋您的投資標的</p>
-          <div class="row ">
-            <div class="col-12">
-              <div class="row row-cols-lg-5 row-cols-md-2 row-cols-2 g-lg-3 g-1">
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-20.png);">
-                    <h5>不限產業</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-1.png);">
-                    <h5>批發/零售</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-2.png);">
-                    <h5>生物科技</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-3.png);">
-                    <h5>網際網路相關</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-4.png);">
-                    <h5>文教相關</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-5.png);">
-                    <h5>大眾傳播相關</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-6.png);">
-                    <h5>旅遊/休閒/運動</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-7.png);">
-                    <h5>一般服務</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-8.png);">
-                    <h5>電子資訊/軟體/半導體相關</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-9.png);">
-                    <h5>一般製造</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-10.png);">
-                    <h5>物流/倉儲</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-11.png);">
-                    <h5>政治宗教及社福相關</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-12.png);">
-                    <h5>金融投顧/保險</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-13.png);">
-                    <h5>法律/會計/顧問/研發</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-14.png);">
-                    <h5>設計相關</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-15.png);">
-                    <h5>建築營造/不動產相關</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-16.png);">
-                    <h5>醫療保健/環境衛生</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-17.png);">
-                    <h5>礦石及土石採取</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-18.png);">
-                    <h5>住宿相關</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-19.png);">
-                    <h5>餐飲</h5>
-                  </a>
-                </div>
+      <div class="container py-lg-15">
+        <h2 class="fw-bold fs-3 text-center text-primary-600 mb-lg-1">篩選產業</h2>
+        <p class="text-gray-200 text-center fs-4 mb-lg-8">快速找尋您的投資標的</p>
+        <div class="row ">
+          <div class="col-12">
+            <div class="row row-cols-lg-5 row-cols-md-2 row-cols-2 g-lg-3 g-1">
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-20.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>不限產業</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-1.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>批發/零售</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-2.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>生物科技</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-3.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>網際網路相關</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-4.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>文教相關</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-5.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>大眾傳播相關</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-6.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>旅遊/休閒/運動</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-7.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>一般服務</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-8.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>電子資訊/軟體/半導體相關</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-9.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>一般製造</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-10.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>物流/倉儲</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-11.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>政治宗教及社福相關</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-12.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>金融投顧/保險</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-13.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>法律/會計/顧問/研發</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-14.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>設計相關</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-15.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>建築營造/不動產相關</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-16.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>醫療保健/環境衛生</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-17.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>礦石及土石採取</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-18.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>住宿相關</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-19.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>餐飲</h5>
+                </a>
               </div>
             </div>
           </div>
         </div>
+      </div>
 
       <!-- 篩選後項目 -->
         <div class="container py-5">
@@ -270,7 +270,7 @@
                 <button class="btn btn-dark dropdown-toggle rounded-0 border border-1 border-white" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                     預設排序
                 </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <ul class="dropdown-menu ps-3" aria-labelledby="dropdownMenuButton">
                   <li><button class="dropdown-item" type="button"></button>預設排序</li>
                   <li><button class="dropdown-item" type="button"></button>依募資金額：高至低</li>
                   <li><button class="dropdown-item" type="button"></button>依募資金額：低至高</li>
@@ -287,7 +287,7 @@
           <div class="card bg-gray-800 mt-8">
             <div class="d-flex justify-content-between project-title">              
                 <div>
-                  <a href="Project-introduction.html" class="text-white fs-3 fw-bold">謝阿金</a>
+                  <a href="Investor-autobiography.html" class="text-white fs-3 fw-bold">謝阿金</a>
                 </div>
                 <div class="d-flex align-items-center">
                   <a href="#">
@@ -352,11 +352,11 @@
            </div>
           </div>
 
-           <!-- 2 -->
-           <div class="card bg-gray-800 mt-8">
+          <!-- 2 -->
+          <div class="card bg-gray-800 mt-8">
             <div class="d-flex justify-content-between project-title">              
                 <div>
-                  <a href="Project-introduction.html" class="text-white fs-3 fw-bold">謝阿金</a>
+                  <a href="Investor-autobiography.html" class="text-white fs-3 fw-bold">謝阿金</a>
                 </div>
                 <div class="d-flex align-items-center">
                   <a href="#">
@@ -421,11 +421,11 @@
            </div>
           </div>
 
-           <!-- 3 -->
-           <div class="card bg-gray-800 mt-8">
+          <!-- 3 -->
+          <div class="card bg-gray-800 mt-8">
             <div class="d-flex justify-content-between project-title">              
                 <div>
-                  <a href="Project-introduction.html" class="text-white fs-3 fw-bold">謝阿金</a>
+                  <a href="Investor-autobiography.html" class="text-white fs-3 fw-bold">謝阿金</a>
                 </div>
                 <div class="d-flex align-items-center">
                   <a href="#">
@@ -490,11 +490,11 @@
            </div>
           </div>
 
-           <!-- 4 -->
-           <div class="card bg-gray-800 mt-8">
+          <!-- 4 -->
+          <div class="card bg-gray-800 mt-8">
             <div class="d-flex justify-content-between project-title">              
                 <div>
-                  <a href="Project-introduction.html" class="text-white fs-3 fw-bold">謝阿金</a>
+                  <a href="Investor-autobiography.html" class="text-white fs-3 fw-bold">謝阿金</a>
                 </div>
                 <div class="d-flex align-items-center">
                   <a href="#">
@@ -559,11 +559,11 @@
            </div>
           </div>
 
-           <!-- 5 -->
-           <div class="card bg-gray-800 mt-8">
+          <!-- 5 -->
+          <div class="card bg-gray-800 mt-8">
             <div class="d-flex justify-content-between project-title">              
                 <div>
-                  <a href="Project-introduction.html" class="text-white fs-3 fw-bold">謝阿金</a>
+                  <a href="Investor-autobiography.html" class="text-white fs-3 fw-bold">謝阿金</a>
                 </div>
                 <div class="d-flex align-items-center">
                   <a href="#">
