--- a/pages/project/Project-product.html
+++ b/pages/project/Project-product.html
@@ -8,12 +8,14 @@
 <body>
     <%- include('./layout/header'); -%>
   
-    <%- include('./components/Project-information'); -%>
-    <div class="bg-gray-1000">
+    
+    <div class="bg-green">
+        <%- include('./components/Project-information'); -%>
         <div class="container">
             <div class="row">
                 <div class="col-1"></div>
                 <div class="col-10">
+                    <p class="pb-5 fs-2 text-primary-600 text-center d-lg-none d-block">產品</p>
                     <p class="pb-15"> 
                         我們的主打產品包括：<br><br>
 
