--- a/pages/project/ProjectList-project.html
+++ b/pages/project/ProjectList-project.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <%- include('./layout/header'); -%>
-  <div class="bg-gray-1000">
+  <div class="bg-green">
 
 <!-- 熱門創業項目 -->
 <div class="container py-8 py-lg-15">
@@ -162,102 +162,102 @@
             <div class="col-12">
               <div class="row row-cols-lg-5 row-cols-md-2 row-cols-2 g-lg-3 g-1">
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-20.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-20.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>不限產業</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-1.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-1.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>批發/零售</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-2.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-2.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>生物科技</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-3.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-3.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>網際網路相關</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-4.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-4.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>文教相關</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-5.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-5.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>大眾傳播相關</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-6.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-6.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>旅遊/休閒/運動</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-7.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-7.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>一般服務</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-8.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-8.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>電子資訊/軟體/半導體相關</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-9.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-9.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>一般製造</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-10.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-10.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>物流/倉儲</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-11.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-11.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>政治宗教及社福相關</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-12.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-12.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>金融投顧/保險</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-13.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-13.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>法律/會計/顧問/研發</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-14.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-14.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>設計相關</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-15.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-15.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>建築營造/不動產相關</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-16.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-16.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>醫療保健/環境衛生</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-17.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-17.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>礦石及土石採取</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-18.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-18.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>住宿相關</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/assets/images/Map-item-19.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/assets/images/Map-item-19.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>餐飲</h5>
                   </a>
                 </div>
@@ -275,7 +275,7 @@
                 <button class="btn btn-dark dropdown-toggle rounded-0 border border-1 border-white" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                     預設排序
                 </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <ul class="dropdown-menu ps-3" aria-labelledby="dropdownMenuButton">
                   <li><button class="dropdown-item" type="button"></button>預設排序</li>
                   <li><button class="dropdown-item" type="button"></button>依募資金額：高至低</li>
                   <li><button class="dropdown-item" type="button"></button>依募資金額：低至高</li>
