更新我的活動、我的消息

--- a/pages/activity-casper.html
+++ b/pages/activity-casper.html
@@ -9,7 +9,7 @@
 <body>
     <%- include('./layout/header'); -%>
 
-    <main class="py-15">
+    <main class="bg-green py-15">
          <!-- banner -->
         <section class="container py-8">
             <div>
