--- a/pages/article-content.html
+++ b/pages/article-content.html
@@ -10,7 +10,7 @@
 <body>
     <%- include('./layout/header'); -%>
   
-    <main class="py-15">
+    <main class="bg-green py-15">
         <!-- 首頁>討論區>文章頁面 -->
         <section class="container py-8 d-lg-block d-none">
             <nav aria-label="breadcrumb">
