--- a/pages/member/meber-identity.html
+++ b/pages/member/meber-identity.html
@@ -80,7 +80,7 @@
                   </ul>
                   <ul class="flex-column fw-bold list-unstyled">
                   <li class="nav-link text-gray-400 fs-5 pt-1">我的活動</li>
-                  <li><a href="#" class="nav-link text-white  ps-1 lh-lg">已申請活動</a></li>
+                  <li><a href="meber-applyActivity.html" class="nav-link text-white  ps-1 lh-lg">已申請活動</a></li>
                   <li><a href="#" class="nav-link text-white  ps-1 lh-lg pb-1">活動紀錄</a></li>
                 </ul>
               
