--- a/pages/activity.html
+++ b/pages/activity.html
@@ -9,7 +9,7 @@
 <body>
     <%- include('./layout/header'); -%>
   
-<main class="py-15">
+<main class="bg-green py-15">
 
      
       <!-- 輪播圖 -->
