--- a/pages/post-article.html
+++ b/pages/post-article.html
@@ -9,7 +9,7 @@
 <body>
     <%- include('./layout/header'); -%>
   
-    <main class="bg-gray-1000 py-15">
+    <main class="bg-green py-15">
 
          
         <section class="container">
