--- a/activity.html
+++ b/activity.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>活動</title>
-  <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-452b9699.js"></script>
-  <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-a49adbe0.css">
+  <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-dcb83003.js"></script>
+  <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-e5845128.css">
 </head>
 
 <body>
@@ -46,7 +46,7 @@
        </a>
     </div>
   </nav>  
-<main class="bg-gray-1000 py-15">
+<main class="bg-green py-15">
 
      
       <!-- 輪播圖 -->
@@ -91,7 +91,7 @@
               <div class="col-md-6">
                 <div class="card-body text-white bd-gray-800">
                   <h2 class="card-title text-primary-1000 fw-bold">卡斯柏創業分享會</h2>
-                  <ul class="fs-5">
+                  <ul class="fs-5 list-unstyled">
                     <li>日期：2024年9月15日</li>
                     <li>時間：14:00-17:00</li>
                     <li>地點：高雄市鹽埕區七賢三路123號2樓</li>
@@ -112,7 +112,7 @@
               <div class="col-md-6">
                 <div class="card-body text-white">
                   <h2 class="card-title text-primary-1000 fw-bold">創夢工坊展覽會</h2>
-                  <ul class="fs-5">
+                  <ul class="fs-5 list-unstyled">
                     <li>日期：2024年9月20日</li>
                     <li>時間：14:00-17:00</li>
                     <li>地點：新北市板橋區中正路120號</li>
@@ -133,7 +133,7 @@
               <div class="col-md-6">
                 <div class="card-body text-white">
                   <h2 class="card-title text-primary-1000 fw-bold">與投資人來一場聯誼活動吧</h2>
-                  <ul class="fs-5">
+                  <ul class="fs-5 list-unstyled">
                     <li>日期：2024年9月15日</li>
                     <li>時間：14:00-17:00</li>
                     <li>地點：新北市板橋區中正路120號</li>
@@ -154,7 +154,7 @@
               <div class="col-md-6">
                 <div class="card-body text-white">
                   <h2 class="card-title text-primary-1000 fw-bold">創夢工坊展覽會</h2>
-                  <ul class="fs-5">
+                  <ul class="fs-5 list-unstyled">
                     <li>日期：2024年9月15日</li>
                     <li>時間：14:00-17:00</li>
                     <li>地點：新北市板橋區中正路120號</li>
