--- a/article-content.html
+++ b/article-content.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>文章頁面</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-  <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-452b9699.js"></script>
-  <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-a49adbe0.css">
+  <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-dcb83003.js"></script>
+  <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-e5845128.css">
 </head>
 
 <body>
@@ -47,7 +47,7 @@
        </a>
     </div>
   </nav>  
-    <main class="bg-gray-1000 py-15">
+    <main class="bg-green py-15">
         <!-- 首頁>討論區>文章頁面 -->
         <section class="container py-8 d-lg-block d-none">
             <nav aria-label="breadcrumb">
