--- a/post-article.html
+++ b/post-article.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>發表文章</title>
-  <script type="module" crossorigin src="/Dream-Workshop/assets/post-article-ad1c4323.js"></script>
-  <link rel="modulepreload" crossorigin href="/Dream-Workshop/assets/bootstrap.bundle.min-452b9699.js">
-  <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-a49adbe0.css">
+  <script type="module" crossorigin src="/Dream-Workshop/assets/post-article-cfa7af2f.js"></script>
+  <link rel="modulepreload" crossorigin href="/Dream-Workshop/assets/bootstrap.bundle.min-dcb83003.js">
+  <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-e5845128.css">
 </head>
 
 <body>
@@ -47,10 +47,11 @@
        </a>
     </div>
   </nav>  
-    <main class="bg-gray-1000 py-15">
+    <main class="bg-green py-15">
 
-         <h2 class="text-center py-8  fw-bolder text-primary-600">發表文章</h2>
+         
         <section class="container">
+          <h2 class="text-center py-8  fw-bolder text-primary-600">發表文章</h2>
               <div class="row">
                 <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg text-lg-end fw-bolder text-gray-400">標題</label>
                 <div class="col-sm-10">
