--- a/project/ProjectList-project.html
+++ b/project/ProjectList-project.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-  <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-452b9699.js"></script>
-  <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-a49adbe0.css">
+  <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-dcb83003.js"></script>
+  <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-e5845128.css">
 </head>
 <body>
     <nav class="header navbar navbar-expand-lg fixed-top">
@@ -45,7 +45,7 @@
         註冊/登入
        </a>
     </div>
-  </nav>  <div class="bg-gray-1000">
+  </nav>  <div class="bg-green">
 
 <!-- 熱門創業項目 -->
 <div class="container py-8 py-lg-15">
@@ -199,102 +199,102 @@
             <div class="col-12">
               <div class="row row-cols-lg-5 row-cols-md-2 row-cols-2 g-lg-3 g-1">
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-20-3779984a.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-20-3779984a.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>不限產業</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-1-6bd554ef.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-1-6bd554ef.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>批發/零售</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-2-6651a152.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-2-6651a152.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>生物科技</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-3-7367502a.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-3-7367502a.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>網際網路相關</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-4-8a16c28d.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-4-8a16c28d.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>文教相關</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-5-0f04795a.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-5-0f04795a.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>大眾傳播相關</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-6-881b5e74.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-6-881b5e74.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>旅遊/休閒/運動</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-7-a49d490e.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-7-a49d490e.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>一般服務</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-8-d33a48a6.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-8-d33a48a6.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>電子資訊/軟體/半導體相關</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-9-1543cd8f.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-9-1543cd8f.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>一般製造</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-10-7c845395.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-10-7c845395.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>物流/倉儲</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-11-316e957a.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-11-316e957a.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>政治宗教及社福相關</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-12-06b6968e.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-12-06b6968e.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>金融投顧/保險</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-13-0813be6f.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-13-0813be6f.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>法律/會計/顧問/研發</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-14-890c6878.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-14-890c6878.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>設計相關</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-15-e6cf370e.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-15-e6cf370e.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>建築營造/不動產相關</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-16-ce1fefc2.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-16-ce1fefc2.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>醫療保健/環境衛生</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-17-b6ae3717.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-17-b6ae3717.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>礦石及土石採取</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-18-9949e97e.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-18-9949e97e.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>住宿相關</h5>
                   </a>
                 </div>
                 <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-19-160fe409.png);">
+                  <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-19-160fe409.png);background-repeat: no-repeat; background-size: cover;">
                     <h5>餐飲</h5>
                   </a>
                 </div>
@@ -312,7 +312,7 @@
                 <button class="btn btn-dark dropdown-toggle rounded-0 border border-1 border-white" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                     預設排序
                 </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <ul class="dropdown-menu ps-3" aria-labelledby="dropdownMenuButton">
                   <li><button class="dropdown-item" type="button"></button>預設排序</li>
                   <li><button class="dropdown-item" type="button"></button>依募資金額：高至低</li>
                   <li><button class="dropdown-item" type="button"></button>依募資金額：低至高</li>
