--- a/investor/ProjectList-investor.html
+++ b/investor/ProjectList-investor.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-  <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-452b9699.js"></script>
-  <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-a49adbe0.css">
+  <script type="module" crossorigin src="/Dream-Workshop/assets/bootstrap.bundle.min-dcb83003.js"></script>
+  <link rel="stylesheet" href="/Dream-Workshop/assets/bootstrap.bundle-e5845128.css">
 </head>
 <body>
     <nav class="header navbar navbar-expand-lg fixed-top">
@@ -45,7 +45,7 @@
         註冊/登入
        </a>
     </div>
-  </nav>  <div class="bg-gray-1000">
+  </nav>  <div class="bg-green">
 
      <!-- 推薦投資人 -->
         <div class="container py-8 py-lg-15">
@@ -187,116 +187,116 @@
         
 
       <!-- 篩選產業 -->
-        <div class="container py-lg-15">
-          <h2 class="fw-bold fs-3 text-center text-primary-600 mb-lg-1">篩選產業</h2>
-          <p class="text-gray-200 text-center fs-4 mb-lg-8">快速找尋您的投資標的</p>
-          <div class="row ">
-            <div class="col-12">
-              <div class="row row-cols-lg-5 row-cols-md-2 row-cols-2 g-lg-3 g-1">
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-20-3779984a.png);">
-                    <h5>不限產業</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-1-6bd554ef.png);">
-                    <h5>批發/零售</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-2-6651a152.png);">
-                    <h5>生物科技</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-3-7367502a.png);">
-                    <h5>網際網路相關</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-4-8a16c28d.png);">
-                    <h5>文教相關</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-5-0f04795a.png);">
-                    <h5>大眾傳播相關</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-6-881b5e74.png);">
-                    <h5>旅遊/休閒/運動</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-7-a49d490e.png);">
-                    <h5>一般服務</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-8-d33a48a6.png);">
-                    <h5>電子資訊/軟體/半導體相關</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-9-1543cd8f.png);">
-                    <h5>一般製造</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-10-7c845395.png);">
-                    <h5>物流/倉儲</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-11-316e957a.png);">
-                    <h5>政治宗教及社福相關</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-12-06b6968e.png);">
-                    <h5>金融投顧/保險</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-13-0813be6f.png);">
-                    <h5>法律/會計/顧問/研發</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-14-890c6878.png);">
-                    <h5>設計相關</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-15-e6cf370e.png);">
-                    <h5>建築營造/不動產相關</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-16-ce1fefc2.png);">
-                    <h5>醫療保健/環境衛生</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-17-b6ae3717.png);">
-                    <h5>礦石及土石採取</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-18-9949e97e.png);">
-                    <h5>住宿相關</h5>
-                  </a>
-                </div>
-                <div class="col">
-                  <a class="card industry-card" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-19-160fe409.png);">
-                    <h5>餐飲</h5>
-                  </a>
-                </div>
+      <div class="container py-lg-15">
+        <h2 class="fw-bold fs-3 text-center text-primary-600 mb-lg-1">篩選產業</h2>
+        <p class="text-gray-200 text-center fs-4 mb-lg-8">快速找尋您的投資標的</p>
+        <div class="row ">
+          <div class="col-12">
+            <div class="row row-cols-lg-5 row-cols-md-2 row-cols-2 g-lg-3 g-1">
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-20-3779984a.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>不限產業</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-1-6bd554ef.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>批發/零售</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-2-6651a152.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>生物科技</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-3-7367502a.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>網際網路相關</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-4-8a16c28d.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>文教相關</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-5-0f04795a.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>大眾傳播相關</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-6-881b5e74.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>旅遊/休閒/運動</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-7-a49d490e.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>一般服務</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-8-d33a48a6.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>電子資訊/軟體/半導體相關</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-9-1543cd8f.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>一般製造</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-10-7c845395.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>物流/倉儲</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-11-316e957a.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>政治宗教及社福相關</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-12-06b6968e.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>金融投顧/保險</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-13-0813be6f.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>法律/會計/顧問/研發</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-14-890c6878.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>設計相關</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-15-e6cf370e.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>建築營造/不動產相關</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-16-ce1fefc2.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>醫療保健/環境衛生</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-17-b6ae3717.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>礦石及土石採取</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-18-9949e97e.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>住宿相關</h5>
+                </a>
+              </div>
+              <div class="col">
+                <a class="card industry-card border-0" href="#" style="background-image: url(/Dream-Workshop/assets/Map-item-19-160fe409.png);background-repeat: no-repeat; background-size: cover;">
+                  <h5>餐飲</h5>
+                </a>
               </div>
             </div>
           </div>
         </div>
+      </div>
 
       <!-- 篩選後項目 -->
         <div class="container py-5">
@@ -307,7 +307,7 @@
                 <button class="btn btn-dark dropdown-toggle rounded-0 border border-1 border-white" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                     預設排序
                 </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <ul class="dropdown-menu ps-3" aria-labelledby="dropdownMenuButton">
                   <li><button class="dropdown-item" type="button"></button>預設排序</li>
                   <li><button class="dropdown-item" type="button"></button>依募資金額：高至低</li>
                   <li><button class="dropdown-item" type="button"></button>依募資金額：低至高</li>
@@ -324,7 +324,7 @@
           <div class="card bg-gray-800 mt-8">
             <div class="d-flex justify-content-between project-title">              
                 <div>
-                  <a href="Project-introduction.html" class="text-white fs-3 fw-bold">謝阿金</a>
+                  <a href="Investor-autobiography.html" class="text-white fs-3 fw-bold">謝阿金</a>
                 </div>
                 <div class="d-flex align-items-center">
                   <a href="#">
@@ -389,11 +389,11 @@
            </div>
           </div>
 
-           <!-- 2 -->
-           <div class="card bg-gray-800 mt-8">
+          <!-- 2 -->
+          <div class="card bg-gray-800 mt-8">
             <div class="d-flex justify-content-between project-title">              
                 <div>
-                  <a href="Project-introduction.html" class="text-white fs-3 fw-bold">謝阿金</a>
+                  <a href="Investor-autobiography.html" class="text-white fs-3 fw-bold">謝阿金</a>
                 </div>
                 <div class="d-flex align-items-center">
                   <a href="#">
@@ -458,11 +458,11 @@
            </div>
           </div>
 
-           <!-- 3 -->
-           <div class="card bg-gray-800 mt-8">
+          <!-- 3 -->
+          <div class="card bg-gray-800 mt-8">
             <div class="d-flex justify-content-between project-title">              
                 <div>
-                  <a href="Project-introduction.html" class="text-white fs-3 fw-bold">謝阿金</a>
+                  <a href="Investor-autobiography.html" class="text-white fs-3 fw-bold">謝阿金</a>
                 </div>
                 <div class="d-flex align-items-center">
                   <a href="#">
@@ -527,11 +527,11 @@
            </div>
           </div>
 
-           <!-- 4 -->
-           <div class="card bg-gray-800 mt-8">
+          <!-- 4 -->
+          <div class="card bg-gray-800 mt-8">
             <div class="d-flex justify-content-between project-title">              
                 <div>
-                  <a href="Project-introduction.html" class="text-white fs-3 fw-bold">謝阿金</a>
+                  <a href="Investor-autobiography.html" class="text-white fs-3 fw-bold">謝阿金</a>
                 </div>
                 <div class="d-flex align-items-center">
                   <a href="#">
@@ -596,11 +596,11 @@
            </div>
           </div>
 
-           <!-- 5 -->
-           <div class="card bg-gray-800 mt-8">
+          <!-- 5 -->
+          <div class="card bg-gray-800 mt-8">
             <div class="d-flex justify-content-between project-title">              
                 <div>
-                  <a href="Project-introduction.html" class="text-white fs-3 fw-bold">謝阿金</a>
+                  <a href="Investor-autobiography.html" class="text-white fs-3 fw-bold">謝阿金</a>
                 </div>
                 <div class="d-flex align-items-center">
                   <a href="#">
