更新會員中心完整版

--- a/pages/discuss.html
+++ b/pages/discuss.html
@@ -37,85 +37,85 @@
 
             
             <tbody class="text-center    table table-sm table-gray-800">
-              <tr class="tbody-text-hover">
+              <tr class="tbody-text-hover align-middle">
                 <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
-              <tr class="tbody-text-hover">
+              <tr class="tbody-text-hover align-middle">
                 <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
-              <tr class="tbody-text-hover">
+              <tr class="tbody-text-hover align-middle">
                 <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
-              <tr class="tbody-text-hover">
+              <tr class="tbody-text-hover align-middle">
                 <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
-              <tr class="tbody-text-hover">
+              <tr class="tbody-text-hover align-middle">
                 <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
-              <tr class="tbody-text-hover">
+              <tr class="tbody-text-hover align-middle">
                 <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
-              <tr class="tbody-text-hover">
+              <tr class="tbody-text-hover align-middle">
                 <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
-              <tr class="tbody-text-hover">
+              <tr class="tbody-text-hover align-middle">
                 <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
-              <tr class="tbody-text-hover">
+              <tr class="tbody-text-hover align-middle">
                 <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
-              <tr class="tbody-text-hover">
+              <tr class="tbody-text-hover align-middle">
                 <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
-              <tr class="tbody-text-hover">
+              <tr class="tbody-text-hover align-middle">
                 <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
-              <tr class="tbody-text-hover">
+              <tr class="tbody-text-hover align-middle">
                 <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
-              <tr class="tbody-text-hover">
+              <tr class="tbody-text-hover align-middle">
                 <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
                 <td>66</td>
               </tr>
-              <tr class="tbody-text-hover">
+              <tr class="tbody-text-hover align-middle">
                 <th scope="row"><a href="article-content.html">是否該放棄年薪7百萬的工作轉去創業?</a></th>
                 <td>2023/7/2  22:04</td>
                 <td>2023/8/2  16:04</td>
